refactor: 헥사고날 아키텍처로 마이그레이션(membership)
아직 인증과 로그인 관련 기능은 계층 구조를 띄고 있음